# python-api

./: .gitignore  app.py  app_old.py  class.py  decorator.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt
app/: config.py  main.py
app/api/: routes.py
app/models/: enums.py  purchase_orders.py  purchase_orders_items.py  users.py
app/services/: purchase_orders_items_service.py  purchase_orders_service.py  users_service.py
migrations/versions/: 153695d4983f_changin_password_column_string_size.py  2a8e9d282cf8_creating_users_table.py  75b8149d7906_modifying_status_column_default_value_.py  90e5ac162462_adding_status_column_to_purchase_orders_.py  9f167cad055b_modifying_status_column_default_value_.py  b15c1b897c01_modifying_status_column_default_value_.py  f8751a9a1a0f_enumerating_possible_purchase_order_.py
purchase_orders/: resources.py
purchase_orders_items/: resources.py
tests/: conftest.py  test_api_endpoints.py
tests/purchase_orders/: test_api_endpoints.py
