[project]
name = "python-api"
version = "0.1.0"
description = "Implementation of a RESTful Python API simulating purchase orders from a store."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]
